--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "faker": "^4.1.0",
-    "jasmine": "^3.0.0",
+    "jasmine": "^3.3.0",
     "request": "^2.83.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.0",
